<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".login_page">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"

        android:layout_weight="1"
        android:drawableLeft="@drawable/baseline_person_black_18dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/usn"
        android:inputType="textPersonName"
        android:paddingTop="15dp"

        android:paddingRight="25dp"
        android:paddingBottom="15dp"
        android:textSize="24sp"

        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ryan_logo" />


    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/baseline_lock_black_18dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/pswd"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:paddingBottom="15dp"
        android:textSize="24sp"

        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/button_design"
        android:fontFamily="serif-monospace"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/lgn"
        android:textColor="@color/white"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ryan_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ryan3"

        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>