<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Stu_Att_Status">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/idk"
        app:itemIconTint="@color/nav_colors"
        app:itemTextColor="@color/nav_colors"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/current_date"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/cal"
        android:hint="@string/date"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/roll_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/roll_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"

        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent ">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/idk">

            <TableRow>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/att_status"
                    android:textAlignment="center"

                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/att_time"
                    android:textAlignment="center"

                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/Morning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:background="@color/active"
                    android:gravity="center"
                    android:text="@string/morning"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/stu_status"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/att_time"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="@color/black"
                    android:textSize="21sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/stu_status2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/att_time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/Evening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:background="@color/active"
                    android:gravity="center"
                    android:text="@string/evening"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/stu_status3"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/att_time3"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/stu_status4"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/att_time4"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

            </TableRow>
        </TableLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_design"
        android:text="@string/details"

        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>