<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Student_Profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/stu_profileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_person_black_24dp"
        android:onClick="SelectImage"
        app:civ_border_color="@android:color/background_dark"
        app:civ_border_overlay="false"
        app:civ_border_width="0dp"

        app:layout_constraintBottom_toTopOf="@id/name_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/idk"
        app:itemIconTint="@color/nav_colors"
        app:itemTextColor="@color/nav_colors"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation"

        />

    <android.support.v7.widget.CardView
        android:id="@+id/name_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="30dp"


        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/roll_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stu_profileImage">


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif"


            android:hint="@string/name"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            android:shadowColor="@color/black"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/roll_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="10dp"

        card_view:layout_constraintBottom_toTopOf="@id/contact_card_view"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/name_card_view">

        <TextView
            android:id="@+id/rollno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif"

            android:hint="@string/roll"
            android:paddingTop="5dp"

            android:paddingBottom="5dp"

            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="10dp"

        card_view:layout_constraintBottom_toTopOf="@id/busnum_card_view"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/roll_card_view">

        <TextView
            android:id="@+id/conact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/contact"
            android:paddingTop="5dp"

            android:paddingBottom="5dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/busnum_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        card_view:cardCornerRadius="30dp"

        card_view:cardElevation="10dp"
        card_view:layout_constraintBottom_toTopOf="@id/logout"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/contact_card_view">

        <TextView
            android:id="@+id/bus_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif"

            android:hint="@string/bus_no"
            android:paddingTop="5dp"

            android:paddingBottom="5dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp" />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/button_design"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintEnd_toStartOf="@id/addGeo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/busnum_card_view" />

    <Button
        android:id="@+id/addGeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/addGeo"
        android:textColor="@color/common_google_signin_btn_text_dark_default"

        app:layout_constraintStart_toEndOf="@id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/busnum_card_view"
        app:layout_constraintBottom_toTopOf="@id/navigation"/>

    <Switch
        android:id="@+id/noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textOff="OFF"
        android:textOn="ON"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
