<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    tools:context=".AddGeoFence">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity"/>

    <EditText
        android:id="@+id/geoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/nm"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/displayer"
        app:layout_constraintTop_toBottomOf="@id/middle"/>

    <ImageView
        android:id="@+id/p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_circle_black_24dp"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/range"
        app:layout_constraintBottom_toTopOf="@id/middle"/>

    <ImageView
        android:id="@+id/m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"

        android:src="@drawable/baseline_remove_circle_black_24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/range"
        app:layout_constraintBottom_toTopOf="@id/middle"/>

    <SeekBar
        android:id="@+id/range"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="1000"
        android:min="100"
        app:layout_constraintBottom_toTopOf="@id/middle"
        app:layout_constraintEnd_toStartOf="@id/m"
        app:layout_constraintStart_toEndOf="@id/p" />

    <android.support.constraint.Guideline
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="500dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/displayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:elevation="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addGeoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/geoName">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/no1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/no1"
                android:textSize="10sp"

                app:layout_constraintBottom_toTopOf="@id/no2"
                app:layout_constraintEnd_toStartOf="@id/del1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/del1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:contentDescription="@string/image"

                android:src="@drawable/baseline_delete_black_18dp"
                app:layout_constraintBottom_toTopOf="@id/del2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/no1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/no2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/no2"
                android:textSize="10sp"

                app:layout_constraintBottom_toTopOf="@id/no3"
                app:layout_constraintEnd_toStartOf="@id/del2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no1" />

            <ImageButton
                android:id="@+id/del2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:contentDescription="@string/image"

                android:src="@drawable/baseline_delete_black_18dp"
                app:layout_constraintBottom_toTopOf="@id/del3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/no2"
                app:layout_constraintTop_toBottomOf="@id/del1" />

            <TextView
                android:id="@+id/no3"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/no3"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/del3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no2" />

            <ImageButton
                android:id="@+id/del3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:contentDescription="@string/image"

                android:src="@drawable/baseline_delete_black_18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/no3"
                app:layout_constraintTop_toBottomOf="@id/del2" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/addGeoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginRight="30dp"
        android:background="@drawable/button_design"

        android:src="@drawable/plus2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/displayer"
        app:layout_constraintTop_toBottomOf="@id/geoName" />


</android.support.constraint.ConstraintLayout>